fix firefox 52 layout bugs

--- a/src/resources/assets/less/wpbones-tabs.less
+++ b/src/resources/assets/less/wpbones-tabs.less
@@ -63,6 +63,7 @@
   {
     position : absolute;
     opacity  : 0;
+    display  : none;
   }
 
   > input[type="radio"]:checked + label
